# SedRSS

./: README.md  components.py  config.py  config.template.ini  emailer.py  fetch_feeds.py  journals.csv  last_email_timestamp.txt  logging_config.py  main.py  main_old.py  parser_factory.py  parser_format1.py  parser_format2.py  parser_format3.py  parser_format4.py  parser_format5.py  parser_format6.py  pyproject.toml  requirements.txt  send_email.py  structure.txt  tempCodeRunnerFile.py  workflow_run.py
.github/workflows/: cron.yaml  weekly_cron.yaml
components/: email_sender.py  llm_orchestrator.py  memory_manager.py  rss_feed_fetcher.py
tests/: test_email_sender.py  test_memory_manager.py
