[tool.poetry]
name = "sedrss"
version = "0.1.0"
description = "A sedimentology research RSS feed and newsletter system"
authors = ["Jake Gearon <jake.gearon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
feedparser = "^6.0.10"
requests = "^2.31.0"
pandas = "^2.1.3"
beautifulsoup4 = "^4.12.2"
openai = "^1.2.3"
scikit-learn = "^1.3.2"
tqdm = "^4.66.1"
duckdb = "^0.9.2"
jinja2 = "^3.1.2"
aiosmtplib = "^3.0.1"  # async SMTP support

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
